public/css/style.css
@import "reset.css";

:root {
    --text: #000000;
    --text-h: #08060d;
    --bg: #fff;
    --border: #e5e4e7;
    --code-bg: #f4f3ec;
    --accent: #aa3bff;
    --accent-bg: rgba(170, 59, 255, 0.1);
    --accent-border: rgba(170, 59, 255, 0.5);
    --social-bg: rgba(244, 243, 236, 0.5);
    --shadow:
        rgba(0, 0, 0, 0.1) 0 10px 15px -3px, rgba(0, 0, 0, 0.05) 0 4px 6px -2px;

    --sans: system-ui, "Segoe UI", Roboto, sans-serif;
    --sans2:
        "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
    --heading: system-ui, "Segoe UI", Roboto, sans-serif;
    --mono: ui-monospace, Consolas, monospace;

    font: 1.125rem/1.63rem var(--sans2);
    letter-spacing: 0.18px;
    /* color-scheme: light dark; */
    color: var(--text);
    background: var(--bg);
    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    @media (max-width: 1024px) {
        font-size: 16px;
    }
}

h1,
h2 {
    font-family: var(--heading);
    font-weight: 500;
    color: var(--text-h);
}

h1 {
    /* font-size: 56px; */
    letter-spacing: -1px;
    margin: 0.5em 0;
    @media (max-width: 1024px) {
        font-size: 36px;
        margin: 20px 0;
    }
}
h2 {
    font-size: 24px;
    line-height: 118%;
    letter-spacing: -0.24px;
    margin: 0 0 8px;
    @media (max-width: 1024px) {
        font-size: 20px;
    }
}

a {
    text-decoration: none;
    color: inherit;
}

.heading {
    font-size: 4rem;
}
.subheading {
    font-size: 1.2rem;
}

.text-muted {
    color: #6c757d;
}

.container {
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-items: center;
    margin-bottom: 1rem;
    gap: 1.5rem;
}

.sub-container {
    margin: 0 auto;
}

.form-container {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 1rem;
}

.form-container .btn {
    margin-left: 0;
}

.form-label-group {
    display: flex;
    flex-direction: column;
    align-items: start;
    width: 18rem;
    @media (width >= 960px) {
        width: 25rem;
    }
    gap: 0.25rem;
}

.form-control {
    width: 100%;
    padding: 0.375rem 0.75rem;
    border-radius: 0.25rem;
    line-height: 1.5;
    border: 1px solid #ced4da;
    transition:
        border-color 0.15s ease-in-out,
        box-shadow 0.15s ease-in-out;
}

.form-control:focus {
    border-color: #80bdff;
    outline: 0;
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

.dashboard-heading {
    display: flex;
    flex-direction: column;
}

.lesson-heading {
    display: flex;
    margin: 1rem auto;
    align-items: center;
}

.profile-heading {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.lessons {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.5rem;
    margin: 1rem auto;
    max-width: 40rem;
}

.lessons li {
    padding: 0px;
}

.lessons li a {
    margin: 0px;
    display: block;
    width: 100%;
    height: 100%;
    padding: 1.25rem 2rem;
    border: 0.2rem solid #000000;
    border-radius: 1rem;
}

.lessons li a:hover,
.lessons li a:focus {
    background-color: #93ffe7;
}

.btn {
    padding: 0.625rem 1rem;
    margin: 0.5rem;
    border-radius: 0.625rem;
    border-style: none;
    background-color: #08c9c2;
    border-radius: 0.2rem;
    transition: background-color 450ms;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
}

.btn:hover,
.btn:focus {
    background-color: #93ffe7;
}

.btn-home {
    padding: 1rem 2rem;
    background-color: #fff;
}

.btn-home:hover,
.btn-home:focus {
    background-color: #93ffe7;
}

